# anpr-viewer

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml
.tx/: config
data/: anpr-viewer.desktop
po/: anpr-viewer.pot  sv.po
po/locale/sv/LC_MESSAGES/: anpr-viewer.mo
src/anpr_viewer/: main.py
