[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anpr-viewer"
version = "0.3.2"
description = "GTK4 license plate recognition from video streams and files"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
anpr-viewer = "anpr_viewer.main:main"

[tool.setuptools.packages.find]
where = ["src"]
